--- a/DOWTank/Views/Tank/TankArrivalUpdate.cshtml
+++ b/DOWTank/Views/Tank/TankArrivalUpdate.cshtml
@@ -39,7 +39,7 @@
             </div>
             <div class="row no-row-margin">
                 <div class="col-md-4 nopadding">
-                    @Html.DropDownList("LoadPoint", null, new { @class = "form-control" })
+                    @Html.DropDownList("LoadPointFrom", null, new { @class = "form-control" })
                 </div>
                 <div class="col-md-4 col-md-offset-1 mt5">
                     <input id="ddlCurrentLocation" name="LocationID" type="hidden" style="width: 100%; box-sizing: border-box;">
