Audit Missing Moves

--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
                     <li><a aria-expanded="true" role="button" data-toggle="dropdown" class="dropdown-toggle" href="#">Reports<span class="caret"></span></a>
                         <ul role="menu" class="dropdown-menu">
                             <li>@Html.ActionLink("Audit Driver List", "AuditDriverList", "Report")</li>
+                            <li>@Html.ActionLink("Audit Missing Moves", "AuditMissingMoves", "Report")</li>
                         </ul>
                     </li>
                     <li><a href="javascript:void(0)">Admin</a></li>
