Audit Moves By User

--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
                         <ul role="menu" class="dropdown-menu">
                             <li>@Html.ActionLink("Audit Driver List", "AuditDriverList", "Report")</li>
                             <li>@Html.ActionLink("Audit Missing Moves", "AuditMissingMoves", "Report")</li>
+                            <li>@Html.ActionLink("Audit Moves By User", "AuditMovesByUser", "Report")</li>
                         </ul>
                     </li>
                     <li><a href="javascript:void(0)">Admin</a></li>
