Tank Cost To Date

--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -48,6 +48,7 @@
                             <li>@Html.ActionLink("Audit Moves By User", "AuditMovesByUser", "Report")</li>
                             <li>@Html.ActionLink("Audit Warning Messages", "AuditWarningMessages", "Report")</li>
                             <li>@Html.ActionLink("Dedicated Tanks", "DedicatedTanks", "Report")</li>
+                            <li>@Html.ActionLink("Tank Cost To Date", "TankCostToDate", "Report")</li>
                         </ul>
                     </li>
                     <li><a href="javascript:void(0)">Admin</a></li>
