rptHSEReport rptInvoiceSummary rptIdleEquipment

--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -49,6 +49,9 @@
                             <li>@Html.ActionLink("Audit Warning Messages", "AuditWarningMessages", "Report")</li>
                             <li>@Html.ActionLink("Dedicated Tanks", "DedicatedTanks", "Report")</li>
                             <li>@Html.ActionLink("Tank Cost To Date", "TankCostToDate", "Report")</li>
+                            <li>@Html.ActionLink("HS&E Report", "HSEReport", "Report")</li>
+                            <li>@Html.ActionLink("Idle Equipment", "IdleEquipment", "Report")</li>
+                            <li>@Html.ActionLink("Invoice Summary", "InvoiceSummary", "Report")</li>
                         </ul>
                     </li>
                     <li><a href="javascript:void(0)">Admin</a></li>
