--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
                             <li>@Html.ActionLink("HS&E Report", "HSEReport", "Report")</li>
                             <li>@Html.ActionLink("Idle Equipment", "IdleEquipment", "Report")</li>
                             <li>@Html.ActionLink("Invoice Summary", "InvoiceSummary", "Report")</li>
+                            <li>@Html.ActionLink("Facility Equipment", "FacilityEquipment", "Report")</li>
                         </ul>
                     </li>
                     <li><a href="javascript:void(0)">Admin</a></li>
