--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link href="@Url.Content("~/Content/dataTables.bootstrap.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/css/select2.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/jquery.datetimepicker.css")" rel="stylesheet" />
-    <link href="~/Content/dataTables.editor.css" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/dataTables.editor.css")" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -81,6 +81,8 @@
     <script src="@Url.Content("~/Scripts/dataTables.bootstrap.js")"></script>
     <script src="@Url.Content("~/Scripts/select2.min.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery.datetimepicker.js")"></script>
+    <script src="@Url.Content("~/Scripts/dataTables.editor.js")"></script>
+    @*<script src="@Url.Content("~/Scripts/dataTables.tableTools.js")"></script>*@
     @RenderSection("scripts", required: false)
     <script>
         $(function () {
