--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link href="@Url.Content("~/Content/dataTables.bootstrap.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/css/select2.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/jquery.datetimepicker.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/dataTables.tableTools.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/dataTables.editor.css")" rel="stylesheet" />
 </head>
 <body>
@@ -81,8 +82,8 @@
     <script src="@Url.Content("~/Scripts/dataTables.bootstrap.js")"></script>
     <script src="@Url.Content("~/Scripts/select2.min.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery.datetimepicker.js")"></script>
+    <script src="@Url.Content("~/Scripts/dataTables.tableTools.js")"></script>
     <script src="@Url.Content("~/Scripts/dataTables.editor.js")"></script>
-    @*<script src="@Url.Content("~/Scripts/dataTables.tableTools.js")"></script>*@
     @RenderSection("scripts", required: false)
     <script>
         $(function () {
