--- a/DOWTank/Views/Admin/Contacts.cshtml
+++ b/DOWTank/Views/Admin/Contacts.cshtml
@@ -1,6 +1,70 @@
 ﻿@{
     ViewBag.Title = "Contacts";
 }
+@section head{
+    <style>
+        *::before, *::after#delhdlist
+        {
+            box-sizing: unset!important;
+        }
+
+        *#delhdlist
+        {
+            box-sizing: unset!important;
+        }
+
+        *::before, *::after#dData
+        {
+            box-sizing: unset!important;
+        }
+
+        *#dData
+        {
+            box-sizing: unset!important;
+        }
+
+        *::before, *::after#eData
+        {
+            box-sizing: unset!important;
+        }
+
+        *#eData
+        {
+            box-sizing: unset!important;
+        }
+
+        *::before, *::after#edithdlist
+        {
+            box-sizing: unset!important;
+        }
+
+        *#edithdlist
+        {
+            box-sizing: unset!important;
+        }
+
+        *::before, *::after#sData
+        {
+            box-sizing: unset!important;
+        }
+
+        *#sData
+        {
+            box-sizing: unset!important;
+        }
+
+        *::before, *::after#cData
+        {
+            box-sizing: unset!important;
+        }
+
+        *#cData
+        {
+            box-sizing: unset!important;
+        }
+    </style>
+}
+
 <div class="well well-lg">
     <!--title-->
     <div class="row">
@@ -11,18 +75,12 @@
     <!--list-->
     <div class="row">
         <div class="col-md-12">
-            <table class="table table-condensed table-striped table-bordered table-responsive table-hover" id="tblContacts">
-                <thead>
-                    <tr>
-                        <th>Id</th>
-                        <th>Last Name</th>
-                        <th>First Name</th>
-                        <th>Phone</th>
-                        <th>Ext</th>
-                    </tr>
-                </thead>
-
+            <table id="list">
+                <tr>
+                    <td></td>
+                </tr>
             </table>
+            <div id="pager"></div>
         </div>
     </div>
 </div>
@@ -31,88 +89,90 @@
 @section scripts
 {
     <script>
-        var editor;
 
-        //editor
         $(function () {
-
-            editor = new $.fn.dataTable.Editor({
-                ajax: "/Admin/ManageContacts",
-                table: "#tblContacts",
-                fields: [{
-                    label: "Id",
+            var lastsel;
+            $("#list").jqGrid({
+                url: "/Admin/GetContacts",
+                datatype: "json",
+                mtype: "GET",
+                colNames: ["Id", "Last Name", "First Name", "Phone", "Ext"],
+                colModel: [
+                {
                     name: "Id",
-                    
-                }, {
-                    label: "LastName",
-                    name: "LastName"
-                }, {
-                    label: "FirstName:",
-                    name: "FirstName"
-                }, {
-                    label: "Phone:",
-                    name: "Phone"
-                }, {
-                    label: "Ext:",
-                    name: "Ext"
+                    index: 'Id',
+                    width: 60,
+                    sortable: false,
+                    align: "right",
+                    key: true
+                },
+                {
+                    name: "LastName",
+                    index: 'LastName',
+                    sortable: false,
+                    editable: true,
+                    edittype: 'text', editrules: {
+                        required: true
+                    },
+                    editoptions: { size: 60 }
+                },
+            {
+                name: "FirstName",
+                index: 'FirstName',
+                sortable: false,
+                editable: true,
+                edittype: 'text', editrules: {
+                    required: true
                 }
-                ]
-            });
-            
-            editor.on('onInitEdit', function () {
-                editor.disable('Id');
-            });
-
-            //mark end of document ready
-        });
-
-        //datatable
-        $(function () {
-
-            var table = $("#tblContacts").dataTable({
-                "bLengthChange": false,
-                searching: false,
-                ordering: true,
-                "order": [],
-                pagination: true,
-                pageLength: 50,
-                "sDom": '<"top"Tflp>rt<"bottom"i><"clear">',
-                responsive: true,
-                "ajax": '/Admin/ManageContacts',
-                "columns": [
-           { "data": "Id" },
-           { "data": "LastName" },
-           { "data": "FirstName" },
-           { "data": "Phone" },
-           { "data": "Ext" }
+                , editoptions: { size: 60 }
+            },
+            {
+                name: "Phone",
+                index: 'Phone',
+                align: "right",
+                sortable: false,
+                editable: true,
+                edittype: 'text', editrules: {
+                    required: true
+                }
+                , editoptions: { size: 60 }
+            },
+            {
+                name: "Ext",
+                index: 'Ext',
+                align: "right",
+                sortable: false,
+                editable: true,
+                edittype: 'text'
+            }
                 ],
-                tableTools: {
-                    sRowSelect: "single",
-                    aButtons: [
-                        {
-                            sExtends: "editor_edit",
-                            editor: editor
-                        },
-                        {
-                            sExtends: "editor_remove",
-                            editor: editor
-                        }
-                    ]
+                pager: "#pager",
+                rowNum: 50,
+                rowList: [10, 20, 30],
+                sortorder: "desc",
+                height: 375,
+                autowidth: true,
+                viewrecords: true,
+                autoencode: true,
+                key: true,
+                editurl: "/Admin/ManageContacts",
+                ondblClickRow: function (rowid, iCol, aData) {
+                    if (rowid && rowid !== lastsel) {
+                        if (lastsel)
+                            $('#list').jqGrid('restoreRow', lastsel);
+                        $('#list').jqGrid('editRow', rowid, true);
+                        lastsel = rowid;
+                    }
                 }
-
-            });
-
-            //$.ajax({
-            //    url: "/Admin/GetContacts",
-            //    dataType: 'json',
-            //    method: 'GET',
-            //    success: function (response) {
-            //        console.log('response ' + response);
-            //    }
-            //});
+            }
+        );            $("#list").jqGrid('navGrid', '#pager', { edit: false, add: true, del: true, search: false, refresh: false },
+             { closeOnEscape: true, reloadAfterSubmit: true, closeAfterEdit: true, left: 400, top: 300 },
+             { closeOnEscape: true, reloadAfterSubmit: true, closeAfterAdd: true, left: 450, top: 300, width: 520 },
+             { closeOnEscape: true, reloadAfterSubmit: true, left: 450, top: 300 });
 
             //mark end of document ready
         });
+
 
     </script>
 }
