Add New Changes regarding Report/DailyDispatch.cshtml

--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -55,6 +55,16 @@
                             <li>@Html.ActionLink("Idle Equipment", "IdleEquipment", "Report")</li>
                             <li>@Html.ActionLink("Invoice Summary", "InvoiceSummary", "Report")</li>
                             <li>@Html.ActionLink("Facility Equipment", "FacilityEquipment", "Report")</li>
+                            <li>@Html.ActionLink("Daily Dispatch", "DailyDispatch", "Report")</li>
+                            <li>@Html.ActionLink("Billing", "Billing", "Report")</li>
+                            <li>@Html.ActionLink("Chassis Activity", "ChassisActivity", "Report")</li>
+                            <li>@Html.ActionLink("Driver Activity", "DriverActivity", "Report")</li>
+                            <li>@Html.ActionLink("Exif Tank Positions", "ExifTankPositions", "Report")</li>
+                            <li>@Html.ActionLink("Last Chassis Location", "LastChassisLocation", "Report")</li>
+                            <li>@Html.ActionLink("Last Tank Move", "LastTankMove", "Report")</li>
+                            <li>@Html.ActionLink("Tank Activity", "TankActivity", "Report")</li>
+                            <li>@Html.ActionLink("Tank Prep/Shipment Schedule", "TankShipmentSchedule", "Report")</li>
+                            <li>@Html.ActionLink("Yard Check", "YardCheck", "Report")</li>
                         </ul>
                     </li>
                     <li>
