Recover Deleted Moves

--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -71,6 +71,7 @@
                         <a aria-expanded="true" role="button" data-toggle="dropdown" class="dropdown-toggle" href="#">Admin<span class="caret"></span></a>
                         <ul role="menu" class="dropdown-menu">
                             <li>@Html.ActionLink("Contacts", "Contacts", "Admin")</li>
+                            <li>@Html.ActionLink("Recover Deleted Moves", "RecoverDeletedMoves", "Admin")</li>
                         </ul>
                     </li>
                 </ul>
